--- a/frontend/src/styles/admin.css
+++ b/frontend/src/styles/admin.css
@@ -1,3 +1,24 @@
 .icon-fix{
     position:relative;top:-2px;
 }
+
+.sidebar{
+    width:250px;
+    height: 100vh;
+    position:fixed;
+    top:0;
+    left:0;
+}
+
+.list-group-item:hover{
+    background-color: #1a1a1a !important;
+    color: rgb(175, 81, 81) !important;
+
+}
+
+#page-content-wrapper{
+    margin-left:255px;
+    margin-right: 5px;
+    width: 100%;
+
+}
